# common-crawl-mcp-server

./: .clickup_state.json  .gitignore  .pre-commit-config.yaml  AGENT5_IMPLEMENTATION_REPORT.md  AGENT_8_IMPLEMENTATION_REPORT.md  LICENSE  README.md  common-crawl-mcp-server-blueprint.md  infrastructure-requirements.yml  pyproject.toml  sonar-project.properties  test_crawl_info_resource.py  test_export_warc.py  verify-infrastructure.yml  verify_crawl_info.py
.claude/: marathon-completion-report.md  marathon-final-summary.md  marathon-strategic-plan.md
.claude/plans/: 2025-10-25-common-crawl-mcp-server.md  2025-10-26-phase-9-advanced-features-solution-summary.md  2025-10-26-phase-9-advanced-features.md
.claude/tasks/: README.md  phase-1-core-infrastructure.md  phase-10-testing-docs.md  phase-2-discovery-tools.md  phase-3-fetching-tools.md  phase-4-parsing-analysis-tools.md  phase-4-parsing-tools.md  phase-5-aggregation-statistics-tools.md  phase-5-aggregation-tools.md  phase-6-export-tools.md  phase-7-mcp-resources.md  phase-8-mcp-prompts.md  phase-9-advanced-features.md  wave-1-export-tools.md  wave-2-resources-and-prompts.md  wave-3-advanced-features.md  wave-4-5-testing-and-documentation.md
.github/: dependabot.yml
docs/archived-artifacts/: common-crawl-mcp-server-blueprint.md
docs/resources/: investigation-state.md
examples/: investigation_state_demo.py
src/: __init__.py  config.py  server.py
src/core/: cache.py  cc_client.py  s3_manager.py  warc_parser.py
src/models/: schemas.py
src/prompts/: __init__.py  competitive_analysis.py  content_discovery.py  domain_research.py  seo_analysis.py
src/resources/: __init__.py  crawl_info.py  investigation_state.py  saved_datasets.py
src/tools/: __init__.py  advanced.py  aggregation.py  discovery.py  export.py  fetching.py  parsing.py
tests/: test_investigation_state.py
(+4 files in other folders)
